# tigil-gastos

./: README.md  app.js  freighter.js  index.html  package-lock.json  sigin.html  signin.html  stellar.js
contract/: Cargo.toml
contract/src/: lib.rs  test.rs
contract/test_snapshots/test/: test_claim_fail.1.json  test_claim_success.1.json  test_deposit.1.json  test_set_goal.1.json
css/: animations.css  base.css  components.css  dashboard.css  jar.css  layout.css  main.css
