[package]
name = "tigilgastos_lock"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"